--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nhuocquy.tracnghiemapp" >
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -40,12 +42,16 @@
             android:label="@string/title_activity_activity_ket_qua" >
         </activity>
         <activity
-            android:name=".activity.ActivityXepHang"
-            android:label="@string/title_activity_activity_xep_hang" >
-        </activity>
-        <activity
             android:name=".activity.ActivityKetQuaXepHang"
             android:label="@string/title_activity_activity_ket_qua_xep_hang" >
+        </activity>
+        <activity
+            android:name=".activity.ActivityHinhDapAn"
+            android:label="@string/title_activity_hinh_dap_an" >
+        </activity>
+        <activity
+            android:name=".activity.ActivityDanhSachXepHang"
+            android:label="@string/title_activity_activity_danh_sach_xep_hang" >
         </activity>
     </application>
 
