--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nhuocquy.tracnghiemapp" >
+    package="com.nhuocquy.tracnghiemapp">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,41 +23,37 @@
         </activity>
         <activity
             android:name=".activity.ActivityChonMonThiThu"
-            android:label="@string/title_activity_main2" >
-        </activity>
+            android:label="@string/title_activity_main2"></activity>
         <activity
             android:name=".activity.ActivityDangNhap"
-            android:label="@string/title_activity_activity_dang_nhap" >
-        </activity>
+            android:label="@string/title_activity_activity_dang_nhap"></activity>
         <activity
             android:name=".activity.ActivityDangKi"
-            android:label="@string/title_activity_activity_dang_ki" >
-        </activity>
+            android:label="@string/title_activity_activity_dang_ki"></activity>
         <activity
             android:name=".activity.ActivityDeThi"
             android:label="@string/title_activity_activity_de_thi"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name=".activity.ActivityKetQua"
-            android:label="@string/title_activity_activity_ket_qua" >
-        </activity>
+            android:label="@string/title_activity_activity_ket_qua"></activity>
         <activity
             android:name=".activity.ActivityKetQuaXepHang"
-            android:label="@string/title_activity_activity_ket_qua_xep_hang" >
-        </activity>
+            android:label="@string/title_activity_activity_ket_qua_xep_hang"></activity>
         <activity
             android:name=".activity.ActivityHinhDapAn"
-            android:label="@string/title_activity_hinh_dap_an" >
-        </activity>
+            android:label="@string/title_activity_hinh_dap_an"
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name=".activity.ActivityDanhSachXepHang"
-            android:label="@string/title_activity_activity_danh_sach_xep_hang" >
-        </activity>
+            android:label="@string/title_activity_activity_danh_sach_xep_hang"></activity>
         <activity
             android:name=".activity.ActivityKetQuaSubmit"
-            android:label="@string/title_activity_activity_ket_qua_submit" >
-        </activity>
+            android:label="@string/title_activity_activity_ket_qua_submit"></activity>
+        <activity
+            android:name=".activity.photoview.ActivityPhotoView"
+            android:label="@string/title_activity_activity_ket_qua_submit"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
