--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -32,7 +32,7 @@
             android:label="@string/title_activity_activity_dang_ki" />
         <activity
             android:name=".activity.ActivityLamBai"
-            android:label="@string/title_activity_activity_de_thi"
+            android:label="@string/title_activity_activity_lam_bai"
             android:screenOrientation="landscape" />
         <activity
             android:name=".activity.ActivityKetQuaThi"
@@ -49,10 +49,10 @@
             android:label="@string/title_activity_activity_danh_sach_xep_hang" />
         <activity
             android:name=".activity.ActivityNhanDeThi"
-            android:label="@string/title_activity_activity_ket_qua_submit" />
+            android:label="@string/title_activity_activity_nhan_de_thi" />
         <activity
             android:name=".activity.photoview.ActivityPhotoView"
-            android:label="@string/title_activity_activity_ket_qua_submit"
+            android:label="@string/title_activity_activity_nhan_de_thi"
             android:screenOrientation="landscape" />
 
         <service
